# tesis-david

./: .gitignore  CMakeLists.txt  README.md
cardio-wokwi/cardio-wokwi/: diagram.json  get_timestamp.py  platformio.ini  wokwi.toml
cardio-wokwi/cardio-wokwi/lib/cardiostream/: SignalBuffer.h  WindowExtractor.h  library.json
cardio-wokwi/cardio-wokwi/src/: main.cpp  secrets.h.example
examples/ecg_brazalete/: main.cpp
src/: BiomedicalPipeline.h  IBiomedicalSensor.h
